fix: collapsed design on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -244,7 +244,7 @@ section.blue .carbon-poweredby {
     }
 
     #header-info {
-        width: 25vw;
+        width: 30vw;
     }
 
     #header-menu {
